<package format="2">
    <name>pivot_control_messages_ros</name>
    <version>0.0.1</version>
    <description>
        This package provides ROS-Messages for pivot_control_messages.
    </description>
    <maintainer email="s1856172@mail.zih.tu-dresden.de">Peter Klausing</maintainer>
    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
</package>
